--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -9,6 +9,7 @@
   border-radius: 8px;
   font-size: 20px;
   font-weight: bold;
+  text-align: center;
 }
 
 
@@ -36,7 +37,7 @@
 
 }
 .activities{
-  padding_top: 30px;
+  padding-top: 30px;
 }
 .act{
   text-align: center;
